# river-flow

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
notebooks/: __init__.py
scripts/: template_scripts.py
src/river-flow/: __init__.py  python_template.py
src/templateproject/: python_template.py
tests/: test_template.py
