[project]
name = "template"
version = "0.1.0"
authors = [{ name = "Project Owner", email = "project_owner@email.uk" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "http://www.project_webpage.here"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["template"]

[tool.setuptools.package-data]
data = ["data/*"]
