[project]
name = "river-flow"
version = "0.1.0"
authors = [{ name = "Samuel Lloyd", email = "samueljohnlloyd12@gmail.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Samuel316/river-flow"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["river-flow"]

[tool.setuptools.package-data]
data = ["data/*"]
